# Loom

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  adding-a-pdk.html  book.toml  build.rs  index.html  print.html  pyproject.toml  searchindex.js  searchindex.json  simulation-architecture.html  timing-violations.html  toc.html  toc.js  troubleshooting-vcd.html  usage.html  usage.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  mcu-soc-rebuild.yml
aigpdk/: aigpdk.v  gem_formal.v
api/gem/: all.html
api/gem/sim/: index.html
api/gem/sky130_pdk/: fn.decompose_from_behavioral.html  fn.decompose_with_pdk.html  fn.eval_behavioral_model.html  fn.is_multi_output_cell.html  fn.is_sequential_cell.html  fn.is_tie_cell.html  fn.load_pdk_models.html  fn.parse_functional_model.html  fn.parse_udp.html  index.html  struct.BehavioralGate.html  struct.BehavioralModel.html  struct.PdkModels.html  struct.UdpModel.html  struct.UdpRow.html
api/gem/testbench/: enum.UartState.html  enum.WatchlistEntry.html  index.html  sidebar-items.js  struct.ClockConfig.html  struct.FlashConfig.html  struct.GpioConfig.html  struct.PortMapping.html  struct.SramInitConfig.html  struct.TestbenchConfig.html  struct.TimingSimConfig.html  struct.UartConfig.html  struct.UartEvent.html  struct.UartMonitor.html  struct.Watchlist.html  struct.WatchlistSignal.html
api/search.index/: 001c10b4b673.js  00ff9becf363.js  0178c5275e35.js  02d78a1ed643.js  032231308c8f.js  03dfc3f28385.js  047333902212.js  04a1371a82a9.js  0596a493a495.js  06511e2d7d7d.js  06846c84bcd0.js  0718594f9666.js  075bbdf02cd4.js  086a3cfc1085.js  0907e82b5aec.js  09189b4d2730.js  0983ae8541e9.js  09ab079c5adb.js  0a00786f640f.js  0af13962b893.js  0b0fb0c93472.js  0baca2ba296e.js  0cd38f25b6f1.js  0d72ef6b3dfc.js  0ecbeca5c728.js  0fd96d2975eb.js  10e436f2d925.js  113dc54e2aba.js  13fb88b38798.js  1498d4b9a909.js  1681dd8eceac.js  17d906753a0c.js  181ec57443cc.js  18b332d6e402.js  18b96d0699a3.js  19af5b3124a3.js  1a2096172166.js  1a2500dbe254.js  1a8314574f6a.js  1aef6ed173d9.js  (+137 more)
api/search.index/desc/: 5e6e3c36b885.js  9ba7005355fa.js  ccb4fe22962b.js
api/search.index/entry/: 2bd0a829aa39.js  f99ed92bf786.js
api/search.index/function/: 7188a3688162.js  d6b4dbb48d86.js
benches/: event_buffer.rs  xprop.rs
benchmarks/: .gitignore  README.md
csrc/: event_buffer.h  kernel_v1.cu  kernel_v1.hip.cpp  kernel_v1.metal  kernel_v1_impl.cuh  spiflash_model.cc  spiflash_model.h
designs/mcu_soc_sky130/: chipflow.toml  pyproject.toml
designs/mcu_soc_sky130/design/: design.py
designs/mcu_soc_sky130/design/software/: main.c
designs/mcu_soc_sky130/design/steps/: board.py
docs/: README.md  SUMMARY.md  adding-a-pdk.md  selective-x-propagation.md  simulation-architecture.md  timing-simulation.md  timing-violations.md  troubleshooting-vcd.md  usage.md
examples/: liberty_bench.rs
scripts/: chipflow_build.py  download_build.py  gen_sim_config.py  local_synth.py  run_sky130_timing_sim.sh  wrap_openframe.py
scripts/chipflow_harness/: README.md  pyproject.toml
scripts/chipflow_harness/src/chipflow_harness/: __init__.py  caravel_vcd_gen.py  events.py  generate_testbench.py  pin_map.py  vcd_gen.py  vcd_writer.py
scripts/chipflow_harness/src/chipflow_harness/models/: __init__.py  gpio.py  i2c.py  spi.py  uart.py
scripts/chipflow_harness/src/chipflow_harness/templates/: timing_main.rs.jinja
scripts/chipflow_harness/tests/: test_models.py
scripts/netlist_graph/: README.md  pyproject.toml
scripts/netlist_graph/src/netlist_graph/: __init__.py  cli.py  graph.py  parser.py
scripts/openlane2/: config.json  mcu_soc_config.json  pdn_cfg.tcl  run_openlane.sh  synth.ys
sram/: CF_SRAM_1024x32_stub.v  sky130_memory.map  sky130_memory.v  sky130_memory_bram.txt
src/: aig.rs  aigpdk.rs  display.rs  event_buffer.rs  flatten.rs  lib.rs  liberty_parser.rs  pe.rs  repcut.rs  sdf_parser.rs  sky130.rs  sky130_decomp.rs  sky130_pdk.rs  staging.rs  testbench.rs
src/cxxrtl_server/: mod.rs
src/sim/: cosim_metal.rs  cpu_reference.rs  mod.rs  setup.rs  vcd_io.rs
tests/assert_test/: assert_simple.v  assert_synth.gv  assert_synth.v  assert_tb.v  assert_test.gemparts  assert_test.vcd  assert_test.vvp  assert_test_output.vcd  synth.tcl
tests/dff_edge_test/: dff_edge_test.v  sim_config.json  sky130_cells_simple.v  tb_dff_edge.v
tests/display_test/: display_after_proc.rtlil  display_initial.rtlil  display_simple.v  display_synth.gv  display_synth.json  synth.tcl  synth_json.tcl
tests/e2e_display_test/: .gitignore  counter_assert_tb.v  counter_with_assert.v  map_simple.v  simple_counter.v  synth_counter_assert.tcl  synth_simple_counter.tcl
tests/mcu_soc/: sim_config.json  sim_config_sky130.json
tests/regression/: .gitignore  README.md  run_all.sh  run_test.sh
tests/stop_finish_test/: README.md  finish_test.v  finish_test.vcd  finish_test_tb.v
tests/timing_test/: .gitignore  6_final.v  6_final_test_input.vcd  README.md  compare_vcd.py  dff_test.gemparts  dff_test.v  dff_test.vcd  dff_test.vvp  dff_test_synth.gv  dff_test_tb.v  gem_output.vcd  gem_output_fixed.vcd  gen_sdf.sh  sim_config.json  synth.tcl
(+62 files in other folders)
