[project]
name = "chipflow-harness"
version = "0.1.0"
description = "VCD stimulus generator for ChipFlow post-synthesis simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jinja2>=3.0"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
chipflow-vcd-gen = "chipflow_harness.vcd_gen:main"
chipflow-caravel-vcd-gen = "chipflow_harness.caravel_vcd_gen:main"
chipflow-compare-events = "chipflow_harness.events:main"
chipflow-gen-testbench = "chipflow_harness.generate_testbench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chipflow_harness"]

[tool.hatch.build.targets.wheel.shared-data]
"src/chipflow_harness/templates" = "chipflow_harness/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
